(Issue #14) WIP: Continued making the runtime design more general so that the ThreadTeam is not the central element.  There is now a RuntimeElement abstract base class that includes the Thread and Data Pub/Sub interface.
Thread pub/sub relationships can be established between elements of any data
type. Therefore, the classes for these should not be linked to data types.
However, data pub/sub relationships should be made between two elements of the
same type.  Classes that implement these, therefore, were templatized to take
the data type.  There is therefore an issue into implementing these two in a single
base class.  I tried to derive a templated data pub/sub class from a based
thread pub/sub class.  However, this meant that the class had to have multiple
templates.  For instance, if a ThreadTeam has a data splitter as a data
subscriber, the template needed two parameters - one for the elements input
data type, one for the elements' output data type.  However, the
attachDataReceiver routine accepted a RuntimeElement whose input type had to
match the output type of the object, but whose output type could be unique.
This meant that the RuntimeElement's were going to be highly specialized.

To get around this, there are now no templates in this part of the design.  This
simplified a great many things as well (e.g. circular dependences).  However,
the compiler no longer enforces rules about matching data types.  Time will tell
if this design decision is acceptable.

Updated all tests.  All passed and run in hello.  Scaling in F2003 data gather
seems correct.

--- a/sites/hello/Makefile_runtime_packet_cpp
+++ b/sites/hello/Makefile_runtime_packet_cpp
@@ -19,9 +19,9 @@ CXX_HDRS   = \
     $(INCDIR)/actionRoutine.h \
     $(INCDIR)/OrchestrationLogger.h \
     $(INCDIR)/OrchestrationRuntime.h \
+    $(INCDIR)/RuntimeElement.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeamDataType.h \
-    $(INCDIR)/ThreadTeamPubSub.h \
     $(INCDIR)/ThreadTeam.h \
     $(INCDIR)/ThreadTeamState.h \
     $(INCDIR)/ThreadTeamIdle.h \
@@ -47,7 +47,13 @@ SRCS       = \
     $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
-    $(SRCDIR)/ThreadPubSub.cpp \
+    $(SRCDIR)/RuntimeElement.cpp \
+    $(SRCDIR)/ThreadTeam.cpp \
+    $(SRCDIR)/ThreadTeamIdle.cpp \
+    $(SRCDIR)/ThreadTeamTerminating.cpp \
+    $(SRCDIR)/ThreadTeamRunningOpen.cpp \
+    $(SRCDIR)/ThreadTeamRunningClosed.cpp \
+    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
     $(TESTBASEDIR)/setInitialConditions_block.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity_block.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_block.cpp \
