--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ docs/OrchestrationSystem.log
 docs/OrchestrationSystem.aux
 docs/OrchestrationSystem.pdf
 sites/*/test_threadteam_cpp.x
-sites/*/test_runtime_int_cpp.x
+sites/*/test_runtime_null_cpp.x
 sites/*/test_runtime_tile_cpp.x
 sites/*/test_runtime_packet_cpp.x
 sites/*/gather_data_cpp.x
