--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ docs/OrchestrationSystem.log
 docs/OrchestrationSystem.aux
 docs/OrchestrationSystem.pdf
 docs/data\ types.pdf
+docs/GridPolymorphism.pdf
 sites/*/test_threadteam_cpp.x
 sites/*/test_runtime_int_cpp.x
 sites/*/test_runtime_tile_cpp.x
