(Issue #14) Added a valgrind test of a thread team configuration that uses the data item splitter.  No leaks or issues found.

--- a/sites/gce/Makefile_threadteam_valgrind
+++ b/sites/gce/Makefile_threadteam_valgrind
@@ -24,6 +24,7 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningOpen.h \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
+    $(INCDIR)/DataItemSplitter.h \
     $(TESTBASEDIR)/NullItem.h
 SRCS       = \
     $(SRCDIR)/OrchestrationLogger.cpp \
@@ -34,6 +35,7 @@ SRCS       = \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
     $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
+    $(SRCDIR)/DataItemSplitter.cpp \
     $(TESTDIR)/runThreadTeamTest.cpp
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
