Updated the testsuite of Summit.  All tests are building.  As I don't know if we have made all necessary changes on this branch yet, I have not run the gather data tests.  I will run these after the merge.
I did run the quick automated tests and it looks like the thread teams are
significantly slower now.  This will need investigation.

--- a/sites/hello/Makefile_gatherData_F2003
+++ b/sites/hello/Makefile_gatherData_F2003
@@ -1,5 +1,7 @@
 SHELL=/bin/sh
 
+# TODO: Redo this with more care.  Make certain that template .h/.cpp dependencies are correct
+
 BASE     = gather_data_F2003
 MAKEFILE = Makefile_gatherData_F2003
 BASEDIR  = ../..
@@ -24,6 +26,7 @@ CXX_HDRS   = \
     $(INCDIR)/actionRoutine.h \
     $(INCDIR)/OrchestrationLogger.h \
     $(INCDIR)/OrchestrationRuntime.h \
+    $(INCDIR)/DataItem.h \
     $(INCDIR)/RuntimeElement.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeamDataType.h \
