(Issue #16) WIP: Started adding in more tests for the GCE system.  I need to understand the Intel/MPICH SW stack better because I presently cannot build Fortran programs using mpifort.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ sites/*/gather_data_F2003_*_*.x
 sites/*/binaries
 sites/hello/manual_cpp.x
 sites/hello/*.dat
+sites/gce/*.dat
+sites/gce/*.log
 sites/summit/gatherDataCpp.*
 sites/summit/testRuntimeCpp.*
 sites/summit/testRuntimeCuda.*
