--- a/sites/hello/Makefile_gatherData_F2003
+++ b/sites/hello/Makefile_gatherData_F2003
@@ -16,7 +16,7 @@ CXX_HDRS   = \
     $(INCDIR)/Tile.h \
     $(INCDIR)/TileAmrex.h \
     $(INCDIR)/TileIter.h \
-    $(INCDIR)/TileIterBaseAmrex.h \
+    $(INCDIR)/TileIterAmrex.h \
     $(SRCDIR)/Grid_IntVect.h \
     $(SRCDIR)/Grid_RealVect.h \
     $(INCDIR)/Grid.h \
