--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ sites/bebop/gather_data_cpp_bebop_*
 sites/bebop/gather_data_cpp_bebop.[oe]*
 sites/bebop/gather_data_F2003_bebop_*
 sites/bebop/gather_data_F2003_bebop.[oe]*
+sites/Thomass-MBP/build/*plt*
 *.log
 *.mod
 *.dSYM
