--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ docs/OrchestrationSystem.aux
 docs/OrchestrationSystem.pdf
 docs/data\ types.pdf
 docs/GridPolymorphism.pdf
+docs/Dev-Guide.pdf
 sites/*/test_threadteam_cpp.x
 sites/*/test_runtime_null_cpp.x
 sites/*/test_runtime_tile_cpp.x
