--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ docs/GridPolymorphism.pdf
 docs/Dev-Guide.pdf
 docs/doxygen/html/*
 docs/doxygen/latex/*
+docs/sphinx/build/*
 sites/*/test_threadteam_cpp.x
 sites/*/test_runtime_null_cpp.x
 sites/*/test_runtime_tile_cpp.x
