--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -14,26 +14,55 @@ CUDADIR      = $(OLCF_CUDA_ROOT)
 
 # Common files
 CXX_HDRS   = \
+    $(INCDIR)/RuntimeElement.h \
+    $(INCDIR)/ThreadTeamModes.h \
+    $(INCDIR)/ThreadTeamDataType.h \
+    $(INCDIR)/ThreadTeam.h \
+    $(INCDIR)/ThreadTeamState.h \
+    $(INCDIR)/ThreadTeamIdle.h \
+    $(INCDIR)/ThreadTeamTerminating.h \
+    $(INCDIR)/ThreadTeamRunningOpen.h \
+    $(INCDIR)/ThreadTeamRunningClosed.h \
+    $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
+    $(INCDIR)/FArray4D.h \
     $(INCDIR)/Tile.h \
+    $(INCDIR)/TileAmrex.h \
+    $(INCDIR)/TileIter.h \
+    $(INCDIR)/TileIterAmrex.h \
+    $(INCDIR)/Grid_IntVect.h \
+    $(INCDIR)/Grid_RealVect.h \
     $(INCDIR)/Grid.h \
+    $(INCDIR)/GridAmrex.h \
+    $(INCDIR)/Grid_AmrCoreFlash.h \
+    $(INCDIR)/OrchestrationLogger.h \
     $(TESTDIR)/CudaStream.h \
     $(TESTDIR)/cudaTestConstants.h
 CU_HDRS   = \
-    $(INCDIR)/CudaGpuArray.h \
-    $(INCDIR)/CudaStreamManager.h \
-    $(INCDIR)/CudaDataPacket.h \
-    $(TESTDIR)/gpuKernel.h
+    $(INCDIR)/CudaRuntime.h \
+    $(INCDIR)/CudaStreamManager.h
 SRCS       = \
+    $(SRCDIR)/RuntimeElement.cpp \
+    $(SRCDIR)/ThreadTeam.cpp \
+    $(SRCDIR)/ThreadTeamIdle.cpp \
+    $(SRCDIR)/ThreadTeamTerminating.cpp \
+    $(SRCDIR)/ThreadTeamRunningOpen.cpp \
+    $(SRCDIR)/ThreadTeamRunningClosed.cpp \
+    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
+    $(SRCDIR)/FArray4D.cpp \
     $(SRCDIR)/Tile.cpp \
+    $(SRCDIR)/TileAmrex.cpp \
+    $(SRCDIR)/Grid_IntVect.cpp \
+    $(SRCDIR)/Grid_RealVect.cpp \
     $(SRCDIR)/Grid.cpp \
+    $(SRCDIR)/GridAmrex.cpp \
+    $(SRCDIR)/Grid_AmrCoreFlash.cpp \
+    $(SRCDIR)/OrchestrationLogger.cpp \
     $(SRCDIR)/CudaStream.cpp \
     $(TESTDIR)/runCudaTests.cpp
 CU_SRCS       = \
     $(SRCDIR)/CudaStreamManager.cu \
-    $(SRCDIR)/CudaDataPacket.cu \
-    $(TESTDIR)/gpuKernel.cu \
-    $(TESTDIR)/testCudaStreamManager.cu \
-    $(TESTDIR)/testCudaDataPacket.cu
+    $(SRCDIR)/CudaRuntime.cu \
+    $(TESTDIR)/testCudaStreamManager.cu
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 CUOBJS    = $(addsuffix .o, $(basename $(CU_SRCS)))
