(Issue #8) WIP: Working up a test to see if I can use FArray4D in GPU kernels.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -62,7 +62,8 @@ SRCS       = \
 CU_SRCS       = \
     $(SRCDIR)/CudaStreamManager.cu \
     $(SRCDIR)/CudaRuntime.cu \
-    $(TESTDIR)/testCudaStreamManager.cu
+    $(TESTDIR)/testCudaStreamManager.cu \
+    $(TESTDIR)/testCudaKernel.cu
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 CUOBJS    = $(addsuffix .o, $(basename $(CU_SRCS)))
