(Issue #8) Cleaned up that last commit.  As pointed out to me by Klaus, the OpenACC data directive was missing the word acc.  This meant that the compiler was providing implicit copy statements for the three objects needed in the device memory.  This does more functionality than the data statement, and explains why we were still getting correct results.

--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -56,11 +56,11 @@ SRCS       = \
     $(SRCDIR)/GridAmrex.cpp \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
-    $(SRCDIR)/CudaStream.cpp
+    $(SRCDIR)/CudaStream.cpp \
+    $(TESTDIR)/testCudaKernel.cpp
 CU_SRCS       = \
     $(SRCDIR)/CudaStreamManager.cu \
-    $(SRCDIR)/CudaRuntime.cu \
-    $(TESTDIR)/testCudaKernel.cu
+    $(SRCDIR)/CudaRuntime.cu
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 CUOBJS    = $(addsuffix .o, $(basename $(CU_SRCS)))
